kubernetes/redis.yml

# 4. Redis 컨트롤러 및 컨테이너 정의 (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule" 
      containers:
      - name: redis
        image: redis:latest
        command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/etc/redis/redis.conf
          subPath: redis.conf
        - name: data-volume
          mountPath: /data
      volumes:
      - name: config-volume
        configMap:
          name: redis-config
      - name: data-volume
        persistentVolumeClaim:
          claimName: redis-data-pvc

---

# 5. 네트워크 & 서비스
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: NodePort
  ports:
  - port: 6379       # 쿠버네티스 내부에서 스프링이 접속할 포트
    targetPort: 6379 # Redis 컨테이너 자체 포트
    nodePort: 31379  # 윈도우 호스트(외부)에서 접속할 포트 (30000-32767 범위 준수)
  selector:
    app: redis
